# letterboxd-compare

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml
src/: cache.rs  letterboxd.rs  main.rs
templates/: and.html  base.html  diff.html  index.html
templates/components/: card.html
