[package]
name = "letterboxd-compare"
version = "0.1.0"
authors = ["Catalin Casuneanu <catalin.casuneanu@jay-software.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "gzip"] }
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
askama = "0.14.0"
scraper = "0.24.0"
anyhow = "1.0.35"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "2.0.17"
redis = { version = "0.32.7", features = ["tokio-comp"] }
deadpool-redis = "0.22.0"
governor = "0.10.1"
sentry = { version = "0.45.0", features = ["panic"]}
sentry-panic = "0.45.0"
